--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
     <link rel="stylesheet" href="static/css/index.css">     
 </head>
 <body>
-    <div class="titolo">
-        <div>TEST DEI RIFLESSI  </div>
-    </div>
     <script src="p5.min.js"></script>
     <script>
         function setup(){
-            createCanvas(1000,500)
+            createCanvas(1400,500)
         }
 
         function draw(){
             background(0,0,0)
+            fill(255,0,0)
+            circle(100,200,175)
+            fill(255,0,0)
+            circle(400,200,175)
+            fill(255,0,0)
+            circle(700,200,175)
+            fill(255,0,0)
+            circle(1000,200,175)
+            fill(255,0,0)
+            circle(1300,200,175)
+            textSize(50);
+            textAlign(CENTER, CENTER);
+            text('TEST DEI RIFLESSI', width / 2, 50);
         }
+
     </script>
 </body>
 </html>
